aggiunte rotte finali e aggiornato swagger
